# BoltQT

./: .gitignore  PYQT6_migration_plan.md  README.md  Requirements.md  boltqt.spec  config.json  main.py  migration_documentation.md  presets.json  pyproject.toml  technical_analysis_plan.md  test_hyperlink_implementation.py
src/ui/: __init__.py  config_tab.py  error_dialog.py  fuzzy_search.py  loading_overlay.py  loading_screen.py  mac_style.py  mac_tab_widget.py  pdf_viewer.py  processing_tab.py  queue_display.py
src/utils/: __init__.py  config_manager.py  excel_manager.py  logger.py  models.py  path_utils.py  pdf_manager.py  performance_profiler.py  processing_thread.py  template_manager.py  vision_manager.py  widget_debugger.py
tests/: run_tests.py  test_config_manager.py  test_fuzzy_search.py  test_processing_tab_flow.py  test_processing_workflow.py  test_template_manager.py
